<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <item android:id="@+id/action_schedule"
        android:icon="@mipmap/ic_calendar"
        android:title="@string/menu_schedule"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_favourites"
        android:icon="@mipmap/ic_favourite_border"
        android:title="@string/menu_favourites"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_venue"
        android:icon="@mipmap/ic_place"
        android:title="@string/menu_venue"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
